--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,19 @@ services:
   dashy:
     # To build from source, replace 'image: lissy93/dashy' with 'build: .'
     # build: .
-    image: lissy93/dashy
+    image: lissy93/dashy:arm64v8
     container_name: Dashy
     # Pass in your config file below, by specifying the path on your host machine
-    # volumes:
-      # - /root/my-config.yml:/app/user-data/conf.yml
+    volumes:
+      - ./my-config.yml:/app/user-data/conf.yml
     ports:
       - 80:8080
     # Set any environmental variables
     environment:
       - NODE_ENV=production
     # Specify your user ID and group ID. You can find this by running `id -u` and `id -g`
-    #  - UID=1000
-    #  - GID=1000
+      - UID=1000
+      - GID=1000
     # Specify restart policy
     restart: unless-stopped
     # Configure healthchecks
